# Benchmark_SpMV_using_CSR5

./: README.md
CSR5_avx2/: CMakeLists.txt  Makefile  anonymouslib_avx2.h  main.cpp
CSR5_avx2/detail/: common.h
CSR5_avx2/detail/avx2/: common_avx2.h  csr5_spmv_avx2.h  format_avx2.h  utils_avx2.h
CSR5_avx512/: Makefile  anonymouslib_avx512.h  main.cpp
CSR5_avx512/detail/avx512/: common_avx512.h  csr5_spmv_avx512.h  format_avx512.h  utils_avx512.h
CSR5_cuda/: Makefile  Makefile_macosx  anonymouslib_cuda.h  main.cu
CSR5_cuda/detail/: utils.h
CSR5_cuda/detail/cuda/: common_cuda.h  csr5_spmv_cuda.h  format_cuda.h  utils_cuda.h
CSR5_knc_phi/: Makefile  anonymouslib_phi.h  mmio.c  mmio.h
CSR5_knc_phi/detail/phi/: format_phi.h
CSR5_opencl_amd/: Makefile  anonymouslib_opencl.h  main.cpp
CSR5_opencl_amd/detail/opencl/: basiccl.h  common_opencl.h  format_opencl.h
CSR5_opencl_nvidia/: Makefile  anonymouslib_opencl.h  main.cpp
CSR5_opencl_nvidia/detail/opencl/: basiccl.h  common_opencl.h  csr5_spmv_opencl.h  utils_opencl.h
CSR5_phi/: main.cpp
CSR5_phi/detail/phi/: common_phi.h  csr5_spmv_phi.h  utils_phi.h
